--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav class="menu navbar nav-light fixe-top bg-light shadow-sm">
         <div class="container-lg">
-            <a class="navbar-brand text-danger fw-bold fs-4" href="#">feluarmu</a>
+            <a class="navbar-brand text-danger fw-bold fs-4" href="#"><marquee behavior="" direction="left">feluarmu</marquee></a>
             <div class="dropdown">
                 <button class="btn btn-secondary btn-danger px-3" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                   <i class="fas fa-bars"></i>
@@ -68,10 +68,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="acerca-texto m-auto">
-                        <img class="laptop me-5 w-25" src="./assets/img/codigoXIV.jpg" alt="laptop">
-                        <p class="parrafo  text-muted ">Profesional que domina tanto el frontend como el backend de aplicaciones web utilizando tecnologías
-                            basadas en JavaScript. Su habilidad para trabajar en ambas capas permite crear aplicaciones completas y
-                            funcionales de manera eficiente.</p>
+                        <!-- <img class="laptop me-5 w-25" src="./assets/img/codigoXIV.jpg" alt="laptop"> -->
+                        <p class="parrafo text-muted"><b>Soy un entusiasta de la informática, la cuál me cautivó desde mi niñez. Mis estudios tomaron el rumbo de la Administración, donde me desempeñé por largos años en el área de la salud. Hoy he retomado ese lazo con la computación pero sumergiéndome en algo nuevo, la programación, con un fuerte deseo de aprender y progresar en el ámbito profesional, convencido de que siempre hay instancias para crecer.</b></p>
                     </div>
                 </div>
             </div>  
@@ -83,7 +81,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="titulo text-center">
-                        <h2 class="fw-bold mb-5">Habilidades</h2>
+                        <h2 class="fw-bold mb-5">Habilidades en Desarrollo Web</h2>
                     </div>
                 </div>
             </div> 
@@ -94,7 +92,10 @@
                             <i class="fa-brands fa-html5"></i>
                         </div>
                         <h3 class="fs-5 py-2">HTML5</h3>
-                        <p class="text-muted">Construir experiencias digitales modernas y accesibles, aprovechando al máximo las capacidades que ofrece este lenguaje.</p>
+                        
+                        <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar" style="width: 50%">50%</div>
+                          </div>
                     </div>
                 </div>
 
@@ -104,7 +105,9 @@
                             <i class="fa-brands fa-css3-alt"></i>
                         </div>
                         <h3 class="fs-5 py-2">CSS3</h3>
-                        <p class="text-muted">Implementación de animaciones, transiciones, y diseño adaptable, asegurando que las interfaces sean estéticamente agradables y funcionales.</p>
+                        <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar" style="width: 25%">25%</div>
+                          </div>
                     </div>
                 </div>
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -113,7 +116,9 @@
                                 <i class="fa-brands fa-js"></i>
                             </div>
                             <h3 class="fs-5 py-2">JavaScript</h3>
-                            <p class="text-muted">Sólido entendimiento de conceptos como asincronía, manipulación del DOM y APIs, dando interactividad y dinamismo a aplicaciones web.</p>
+                            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                                <div class="progress-bar" style="width: 25%">25%</div>
+                              </div>
                         </div>
                 </div>
             </div>
